# aa-backend-service

./: Dockerfile  README.md  main.py  pyproject.toml  test.db
aa_backend_service/cron_job/: __init__.py
aa_backend_service/db/: __init__.py  account_aggregator.py
aa_backend_service/routers/: account_aggregator.py
aa_backend_service/services/: aa.py
